[package]
name = "ICP_FinalCase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
serde = "1.0.154"
ic-cdk-macros = "0.6.9"
ic-stable-structures = "0.5.6"